Add support for optional and void bodies for extension operations

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -337,3 +337,12 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ManagedServiceIdentityV4Property`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4Property)
 - [`Provider`](./data-types.md#Azure.ResourceManager.Legacy.Provider)
 - [`ProviderParameter`](./data-types.md#Azure.ResourceManager.Legacy.ProviderParameter)
+
+## Azure.ResourceManager.Legacy.Extension
+
+### Operations
+
+- [`CreateOrReplaceSync`](./interfaces.md#Azure.ResourceManager.Legacy.Extension.CreateOrReplaceSync)
+- [`CreateOrUpdateAsync`](./interfaces.md#Azure.ResourceManager.Legacy.Extension.CreateOrUpdateAsync)
+- [`CustomPatchAsync`](./interfaces.md#Azure.ResourceManager.Legacy.Extension.CustomPatchAsync)
+- [`CustomPatchSync`](./interfaces.md#Azure.ResourceManager.Legacy.Extension.CustomPatchSync)
